Added the design of the patient model and debugged report, monitor log, login, and register functionalities of the patient module

--- a/Patient Module/loginPatient.html
+++ b/Patient Module/loginPatient.html
@@ -15,11 +15,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="../css/patientLoginStyle.css">
     <!--Bootstrap-->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
-    <!--JS-->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 
@@ -40,10 +36,10 @@
                 <button name="loginButton" class="buttonLogin">Login</button>
             </div>
             <div class="form-button">
-                <button name="registerButton" class="buttonRegister">Resgister</button>
+                <button name="registerButton" class="buttonRegister" href="patientRegistration.php">Resgister</button>
             </div>
             <div class="form-link">
-                <a href="resetPW.html" id="forgot_pswd">Forget password?</a>
+                <a href="" id="forgot_pswd">Forget password?</a>
             </div>
         </form>
     </div>
