php minor update on manage deployment

--- a/Admin/ManageDep.html
+++ b/Admin/ManageDep.html
@@ -109,7 +109,7 @@
             Add Deployment
         </button>
 
-        <div id="DeployModal" class="modal">
+        <div id="DeployModal" class="modal-window">
             <div class="content-modal">
                 <div class="modal-header">
                     <h4 class="modal-title">Add Deployment</h4>
@@ -174,18 +174,21 @@
                             </div>
                         </div>
                     </div>
-
-
-
+                    <div id="uploadListPatient">
+                        <h4> List Patients </h4>
+                        <div>
+                            <a href="url">Generate File</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button id="cancel1" type="button" class="button5"> Cancel </button>
-                    <button id='add1' type="button" class="button5"> Add</button>
+                    <button id="cancel1" type="button" class="btn btn-outline-dark"> Cancel </button>
+                    <button id='add1' type="button" class="btn btn-success""> Add</button>
                 </div>
             </div>
         </div>
 
-        <div id="DeployModalConf" class="modal">
+        <div id="DeployModalConf" class="modal-window">
             <div class="content-modal">
                 <div class="modal-header">
                     <h4 class="modal-title">Add Deployment</h4>
@@ -195,8 +198,8 @@
                     <h3> Are you sure to add this deployment? </h3>
                 </div>
                 <div class="modal-footer">
-                    <button id="no1" type="button" class="button5"> No </button>
-                    <button id="yes1" type="button" class="button5"> Yes </button>
+                    <button id="no1" type="button" class="btn btn-outline-dark"> No </button>
+                    <button id="yes1" type="button" class="btn btn-success""> Yes </button>
                 </div>
             </div>
         </div>
@@ -205,7 +208,7 @@
             Add Health District
         </button>
 
-        <div id="HealthDModal" class="modal">
+        <div id="HealthDModal" class="modal-window">
             <div class="content-modal">
                 <div class="modal-header">
                     <h4 class="modal-title">Add Health District</h4>
@@ -263,12 +266,6 @@
                                     <input type="checkbox" id="D3" name="D3" value="D3">
                                     <label for="D3"> District 3</label><br>
                                 </li>
-                                <li>
-                                    <input type="checkbox" id="D3" name="D3" value="D3">
-                                    <label for="D3"> District 3</label><br>
-                                </li>
-
-
 
                             </ul>
 
@@ -276,14 +273,15 @@
 
                     </div>
                     <div class="modal-footer">
-                    <button id="cancel2" type="button" class="button5"> Cancel </button>
-                    <button id='add2' type="button" class="button5"> Add</button>
+                    <button id="cancel2" type="button" class="btn btn-outline-dark"> Cancel </button>
+                    <button id='add2' type="button" class="btn btn-success"> Add</button>
+
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="HealthDModalConf" class="modal">
+        <div id="HealthDModalConf" class="modal-window">
             <div class="content-modal">
                 <div class="modal-header">
                     <h4 class="modal-title">Add Health District</h4>
@@ -294,8 +292,8 @@
                     <h3> Are you sure to add this Health District? </h3>
                 </div>
                 <div class="modal-footer">
-                    <button id="no2" type="button" class="button5"> No </button>
-                    <button id='yes2' type="button" class="button5"> Yes </button>
+                    <button id="no2" type="button" class="btn btn-outline-dark"> No </button>
+                    <button id='yes2' type="button" class="btn btn-success"> Yes </button>
                 </div>
             </div>
         </div>
