--- a/residueFiles/ManageReport.html
+++ b/residueFiles/ManageReport.html
@@ -8,7 +8,7 @@
     <title>SMIT+ | Manage Reports</title>
 
     <!-- Our Custom CSS -->
-    <link href="../css/style.css" rel="stylesheet">
+    <!-- <link href="../css/style.css" rel="stylesheet"> -->
 
     <!-- Bootstrap-->
     <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="loading">
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
@@ -183,7 +183,6 @@
             </div>
         </div>
 
-
         <!-- Additional Scripts-->
         <!-- jQuery CDN - Slim version (=without AJAX) -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -237,7 +236,29 @@
                 });
             });
         </script>
-
+    </div>
 </body>
 
 </html>
+
+<style>
+    #loading {
+        background: url('../img/loading.gif') no-repeat center center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 9999999;
+    }
+</style>
+<script>
+    function hideLoader() {
+        $('#loading').hide();
+    }
+
+    $(window).ready(hideLoader);
+
+    // Strongly recommended: Hide loader after 20 seconds, even if the page hasn't finished loading
+    setTimeout(hideLoader, 20 * 1000);
+</script>
